fix(theming): Adjust status colors to be also accessible on blurry background

--- a/apps/theming/css/default.css
+++ b/apps/theming/css/default.css
@@ -21,17 +21,17 @@
   /** @deprecated use `--color-text-maxcontrast` instead */
   --color-text-lighter: var(--color-text-maxcontrast);
   --color-scrollbar: rgba(34,34,34, .15);
-  --color-error: #d91812;
-  --color-error-rgb: 217,24,18;
-  --color-error-hover: #dd342f;
-  --color-error-text: #c61610;
-  --color-warning: #b88100;
-  --color-warning-rgb: 184,129,0;
-  --color-warning-hover: #c69a32;
-  --color-warning-text: #855d00;
+  --color-error: #C00505;
+  --color-error-rgb: 192,5,5;
+  --color-error-hover: #c72424;
+  --color-error-text: #C00505;
+  --color-warning: #A37200;
+  --color-warning-rgb: 163,114,0;
+  --color-warning-hover: #8a6000;
+  --color-warning-text: #7f5900;
   --color-success: #2d7b41;
   --color-success-rgb: 45,123,65;
-  --color-success-hover: #448955;
+  --color-success-hover: #428854;
   --color-success-text: #286c39;
   --color-info: #0071ad;
   --color-info-rgb: 0,113,173;
